# pizzanet

./: .gitignore  .gitmodules  AGENTS.md  BRIEF.md  Cargo.toml  HANDOFF.md  photo-prediction.json  rust-toolchain.toml
ARTestApp/ARTest2/: AppDelegate.swift  ContentView.swift  Info.plist  RecordingSession.swift  SceneDelegate.swift
ARTestApp/ARTest2.xcodeproj/: project.pbxproj
ARTestApp/ARTest2.xcodeproj/project.xcworkspace/xcuserdata/daniel.xcuserdatad/: UserInterfaceState.xcuserstate
ARTestApp/ARTest2.xcodeproj/xcuserdata/daniel.xcuserdatad/xcschemes/: xcschememanagement.plist
app/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
app/scripts/: analyze-recordings.mjs
app/src/: index.css  main.tsx
app/src/ar/: DevRecording.ts  FallbackArSession.ts  ThreeArScene.ts  WebXrArSession.ts  capabilities.ts  nativeCameraMode.ts  types.ts
app/src/components/: ArDebugPanel.tsx
app/src/components/pages/: Home.tsx
app/src/server/: server.ts
artifacts/roof-model-overfit/: final-metrics.json  metrics.jsonl  model.json  training-config.json
assets/synthetic/: README.md  manifest.json
assets/synthetic/environments/: dikhololo_sunset_1k.hdr
assets/training/: README.md  open-images-review-ledger.json
crates/ar-tracker-wasm/: Cargo.toml
crates/ar-tracker-wasm/src/: estimator.rs  frontend.rs  geometry.rs  lib.rs  map.rs  reloc.rs  scale.rs  tests.rs
crates/roof-fit/: Cargo.toml
crates/roof-fit/src/: lib.rs  solver.rs
crates/roof-geometry/: Cargo.toml
crates/roof-geometry/src/: geometry.rs  lib.rs  parameters.rs  semantics.rs
crates/roof-model/: Cargo.toml
crates/roof-model/src/: keypoint.rs  keypoint_prediction.rs  lib.rs  mobilenet.rs  preprocess.rs
crates/roof-training/: Cargo.toml
crates/roof-training/src/: lib.rs
crates/synth-data/: Cargo.toml  README.md
crates/synth-data/src/: appearance.rs  composition.rs  config.rs  deterministic.rs  lib.rs  manifest.rs  record.rs  sampling.rs  split.rs  types.rs  validation.rs
crates/synth-data/tests/: appearance_contract.rs  contracts.rs  material_variation.rs  roof_morphology.rs
crates/synth-render/: Cargo.toml
crates/synth-render/src/: assets.rs  lib.rs  render.wgsl  scene.rs
crates/vio-core/: Cargo.toml
crates/vio-core/src/: frame.rs  lib.rs  preintegration.rs  sensor.rs  time.rs
notes/: 8TH_WALL_RESEARCH.MD  AR_RECORDINGS.md  AR_RECORDING_ANALYSIS.md  CHATGPT_RESEARCH.md  REFERENCE_IMAGE_CALIBRATION.md  SLAM_REWRITE.md  SYNTHETIC_TRAINING_DATA.md  TRAINING_AND_INFERENCE.md  UPDATED_PLAN.md
scripts/: compare-arkit-ground-truth.py
tools/roof-data/: Cargo.toml
tools/roof-data/src/: main.rs
tools/roof-detect/: Cargo.toml
tools/roof-detect/src/: main.rs
tools/roof-synth/: Cargo.toml  build.rs
tools/roof-synth/src/: assets.rs  coverage.rs  generate.rs  lib.rs  main.rs  photometric.rs  preview.rs  render_plan.rs  shard.rs  validate.rs
tools/roof-train/: Cargo.toml
tools/roof-train/src/: augmentation.rs  fit_evaluation.rs  keypoint_train.rs  main.rs
tools/vio-replay/: Cargo.toml
tools/vio-replay/src/: lib.rs  main.rs
