[workspace]
members = ["crates/*", "tools/*"]
# references/ holds read-only clones; arael is consumed as a path dependency
# and must not be absorbed into this workspace.
exclude = ["references/arael"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "Proprietary"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
