[package]
name = "ar-tracker-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Browser WASM boundary for camera and visual-inertial AR tracking"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Path dependency: the published 0.7.1 panics on wasm32 (std::time reached
# inside the solver); the 0.7.2 tree carries the complete wasm clock handling.
arael = { path = "../../references/arael" }
glam = "0.33.0"
image = { version = "0.25", default-features = false }
optical-flow-lk = "0.3"
vio-core = { path = "../vio-core" }
wasm-bindgen = "0.2.106"

[lints]
workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
