[package]
name = "roof-geometry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Parametric classic Pizza Hut roof geometry and semantic structure"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.149"

[lints]
workspace = true
