[package]
name = "roof-model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Portable Burn model and single-frame roof detection contract"

[features]
default = []
pretrained = ["burn/network", "dep:burn-store", "dep:dirs"]

[dependencies]
burn = { version = "0.21.0", default-features = false, features = ["std"] }
burn-store = { version = "0.21.0", default-features = false, features = ["std", "pytorch"], optional = true }
dirs = { version = "6.0.0", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"

[dev-dependencies]
burn = { version = "0.21.0", default-features = false, features = ["std", "ndarray"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4.3", features = ["wasm_js"] }

[lints]
workspace = true
