[package]
name = "synth-data"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Deterministic schemas and procedural plans for synthetic roof datasets"

[dependencies]
libm = "0.2.16"
rand = { version = "0.9.2", default-features = false, features = ["std"] }
rand_chacha = { version = "0.9.0", default-features = false, features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"

[lints]
workspace = true
