[package]
name = "vio-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Browser-independent visual-inertial data contracts and IMU preintegration"

[dependencies]
glam = { version = "0.33.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"

[dev-dependencies]
approx = "0.5.1"
serde_json = "1.0.149"

[lints]
workspace = true
