[package]
name = "roof-detect"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Run one-frame Burn roof inference and render a diagnostic mesh overlay"

[dependencies]
anyhow = "1.0.102"
burn = { version = "0.21.0", default-features = false, features = ["std", "flex", "wgpu"] }
clap = { version = "4.6.0", features = ["derive"] }
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "webp"] }
imageproc = { version = "0.26.1", default-features = false }
exif = { package = "kamadak-exif", version = "0.6.1" }
roof-model = { path = "../../crates/roof-model" }
roof-fit = { path = "../../crates/roof-fit" }
roof-geometry = { path = "../../crates/roof-geometry" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[lints]
workspace = true
