[package]
name = "roof-synth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Headless synthetic dataset generator and inspection CLI"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
glam = "0.33.0"
half = "2.7.1"
image = { version = "0.25.10", default-features = false, features = ["hdr", "jpeg", "png"] }
pollster = "0.4.0"
roof-geometry = { path = "../../crates/roof-geometry" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
synth-data = { path = "../../crates/synth-data" }
synth-render = { path = "../../crates/synth-render" }
tar = "0.4.44"
zstd = "0.13.3"

[dev-dependencies]
tempfile = "3.24.0"

[lints]
workspace = true
